--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "providerkit"
-version = "0.1.0"
+version = "0.2.0"
 description = "ProviderKit - Generic provider management library"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -65,6 +65,7 @@ test = [
 
 [tool.setuptools]
 license-files = ["LICENSE"]
+package-data = {providerkit = [".commands.json"]}
 
 [tool.setuptools.packages.find]
 where = ["src"]
